--- a/src/main/resources/static/css/estilo.css
+++ b/src/main/resources/static/css/estilo.css
@@ -1,245 +1,138 @@
 @charset "ISO-8859-1";
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     margin: 0;
-    padding: 0;
-    border: 0;
-    font: inherit;
-    font-size: 100%;
-    vertical-align: baseline;
+    background-color: #f2f2f2;
 }
 
-html {
-    line-height: 1;
+form {
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
-ol,
-ul {
-    list-style: none;
+h2 {
+    text-align: center;
 }
 
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-caption,
-th,
-td {
-    text-align: left;
-    font-weight: normal;
-    vertical-align: middle;
-}
-
-q,
-blockquote {
-    quotes: none;
-}
-
-q:before,
-q:after,
-blockquote:before,
-blockquote:after {
-    content: "";
-    content: none;
-}
-
-a img {
-    border: none;
-}
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-menu,
-nav,
-section,
-summary {
+label {
     display: block;
+    margin-bottom: 10px;
 }
 
-* {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
+input[type="text"],
+input[type="password"] {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
     box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-font-smoothing: antialiased;
-    -ms-font-smoothing: antialiased;
-    -font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+}
+
+input[type="submit"] {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 body {
-    height: 100vh;
-    background: url(../images/pacifico-adventures.jpg) center top;
-    background-size: cover;
-    font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
 }
 
-.login {
-    position: absolute;
-    box-sizing: border-box;
-    padding: 70px 30px;
-    width: 320px;
-    height: 420px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgb(0, 0, 128);
-    color: black;
+.header {
+    background-color: #f2f2f2;
+    padding: 10px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
-.login__avatar {
-    position: absolute;
-    top: -50px;
-    left: calc(50% - 50px);
-    width: 100px;
-    height: 100px;
+.header h2 {
+    margin: 0;
+    margin-right: 10px;
+}
+
+.header .user-icon {
+    width: 24px;
+    height: 24px;
+    background-color: #ccc;
     border-radius: 50%;
-    cursor: pointer;
+    margin-right: 5px;
 }
 
-.login__title {
-    margin-bottom: 20px;
-    padding: 0 0 20px;
+.content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+}
+
+.box {
+    width: 200px;
+    height: 200px;
+    border: 2px solid blue;
+    margin: 10px;
+}
+
+.footer {
+    background-color: #f2f2f2;
+    padding: 10px;
     text-align: center;
-    font-size: 22px;
 }
 
-.login__label {
-    display: block;
-    font-weight: bold;
-}
-
-.login__input {
-    width: 100%;
-    margin-bottom: 20px;
-}
-
-.login__input__username {
-    height: 40px;
+.footer button {
+    background-color: #4CAF50;
+    color: white;
     border: none;
-    border-bottom: 1px solid #fff;
-    outline: none;
-    font-size: 16px;
-    background-color: transparent;
-    color: #fff;
-}
-
-.login__input__password {
-    height: 40px;
-    border: none;
-    border-bottom: 1px solid #fff;
-    outline: none;
-    font-size: 16px;
-    background-color: transparent;
-    color: #fff;
-}
-
-.login__input__button {
-    height: 40px;
-    border: none;
-    border-radius: 20px;
-    outline: none;
-    cursor: pointer;
-    font-size: 18px;
-    background-color: black;
-    color: #fff;
-}
-
-.login__link {
-    display: block;
+    padding: 10px 20px;
+    text-align: center;
     text-decoration: none;
-    font-size: 12px;
-    line-height: 20px;
-    color: #a9a9a9;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
-.login__link:hover {
-    color: #fff;
+nav{
+    display:felx;
+    align-items:center;
+    justify-content:space-between;
+    padding-top:20px;
+    padding-left:5%;
+    padding-right:5%;
+    font-weight:bold;
+
 }
+
+h1{
+    color:write;
+    font-size:45%;
+}
+
+ul li{
+    display:inline-block;
+    padding:opx 20px;
+
+}
+
+a{
+    color:write;
+    text-decoration:none;
+}
+
+
+
