--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -1,54 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Dashboard</title>
-	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/css/estilo.css">
 </head>
 <body>
-<div class="container">
-	<h1 class="mt-4">Dashboard</h1>
-
-	<div class="row">
-		<div class="col-lg-4 col-md-6 mb-4">
-			<div class="card">
-				<div class="card-body">
-					<h5 class="card-title">Card Title</h5>
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					<a href="#" class="btn btn-primary">Button</a>
-				</div>
-			</div>
-		</div>
-
-		<div class="col-lg-4 col-md-6 mb-4">
-			<div class="card">
-				<div class="card-body">
-					<h5 class="card-title">Card Title</h5>
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					<a href="#" class="btn btn-primary">Button</a>
-				</div>
-			</div>
-		</div>
-
-		<div class="col-lg-4 col-md-6 mb-4">
-			<div class="card">
-				<div class="card-body">
-					<h5 class="card-title">Card Title</h5>
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					<a href="#" class="btn btn-primary">Button</a>
-				</div>
-			</div>
-		</div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<a class="navbar-brand" href="#">PACIFIC ADVENTURE</a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<div class="collapse navbar-collapse" id="navbarNav">
+		<ul class="navbar-nav">
+			<li class="nav-item">
+				<a class="nav-link" href="#">INICIO</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">CONTACTOS</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">SOBRE MI</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="/users/list">Lista de Usuarios</a>
+			</li>
+		</ul>
 	</div>
-</div>
-<div>
+	<div class="btn btn-outline-success">
+		<button class="btn btn-primary" onclick="location.href='/users/login'">Cerrar sesión</button>
+	</div>
+</nav>
 
+<div class="container">
+	<!-- Contenido de tu página -->
 </div>
 
-<!-- Bootstrap JS -->
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
-
